--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -20,22 +20,7 @@
                             </div>
                         </a>
                     </div> <!-- end .card -->
-
-                    <p class="h4 font-weight-light pt-5 mb-4">
-                        Have fun donating to OpenEMR by purchasing a piece of OpenEMR History!
-                    </p>
-                    <nft-card
-                        contractAddress="0x495f947276749ce646f68ac8c248420045cb7b5e"
-                        tokenId="92931315403547181889022908380199443582932394302701985656374880944572000632833">
-                    </nft-card>
-                    <script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script>
-                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to see other available pieces of OpenEMR History</a></div>
-                    <style type="text/css">
-                        #mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
-                        #mergeRow-gdpr {margin-top: 20px;}
-                        #mergeRow-gdpr fieldset label {font-weight: normal;}
-                        #mc-embedded-subscribe-form .mc_fieldset{border:none;min-height: 0px;padding-bottom:0px;}
-                    </style>
+                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to have fun donating to OpenEMR by purchasing a piece of OpenEMR History!</a></div>
                 </div>
                 <div class="target_nav col-sm-12 col-md-5 col-lg-5 pb-3 card-holders">
                     <div class="card mb-1 d-none d-xl-flex">
