--- a/themes/openemr/layouts/lectures/list.html
+++ b/themes/openemr/layouts/lectures/list.html
@@ -58,7 +58,7 @@
         <div class="d-block">{{ .Params.presenter }}</div>
         <div class="d-block">{{ .Scratch.Get "lectureDate" | time.Format "Monday, January 2, 2006" }}</div>
         <div class="d-block pt-2">
-          <p class="lead">{{ .Summary }}</p>
+          <p class="lead">{{ .Content }}</p>
         </div>
         <div class="d-block">
           <a href="{{ .Params.recording_url }}" target="_blank"><img src="{{ .Params.image | absURL }}" class="img-fluid w-50" alt=""></a>
