--- a/themes/openemr/layouts/lectures/single.html
+++ b/themes/openemr/layouts/lectures/single.html
@@ -6,7 +6,7 @@
   <div class="d-block">{{ .Params.presenter }}</div>
   <div class="d-block">{{ .PublishDate.Format "Monday, January 2, 2006" }}</div>
   <div class="d-block pt-2">
-    <p class="lead">{{ .Summary }}</p>
+    <p class="lead">{{ .Content }}</p>
   </div>
   <div class="d-block">
     <a href="{{ .Params.recording_url }}" target="_blank"><img src="{{ .Params.image | absURL }}" class="img-fluid w-50" alt=""></a>
