--- a/themes/openemr/layouts/lectures/list.html
+++ b/themes/openemr/layouts/lectures/list.html
@@ -49,11 +49,7 @@
           {{ if gt (.Scratch.Get "lectureDate" | time.AsTime) now }}
             <small class="badge radius-none py-1 px-2 bg-primary text-white text-opacity-75">Upcoming</small>
           {{ end }}
-          {{ if (isset .Params "recording_url") }}
-            <a href="{{ .Params.recording_url }}" target="_blank">{{ .Title }}</a>
-          {{ else }}
-            {{ .Title }}
-          {{ end }}
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
         </h2>
         <div class="d-block">{{ .Params.presenter }}</div>
         <div class="d-block">{{ .Scratch.Get "lectureDate" | time.Format "Monday, January 2, 2006" }}</div>
