--- a/themes/openemr/layouts/lectures/list.html
+++ b/themes/openemr/layouts/lectures/list.html
@@ -49,11 +49,7 @@
           {{ if gt (.Scratch.Get "lectureDate" | time.AsTime) now }}
             <small class="badge radius-none py-1 px-2 bg-primary text-white text-opacity-75">Upcoming</small>
           {{ end }}
-          {{ if (isset .Params "recording_url") }}
-            <a href="{{ .Params.recording_url }}" target="_blank">{{ .Title }}</a>
-          {{ else }}
-            {{ .Title }}
-          {{ end }}
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
         </h2>
         <div class="d-block">{{ .Params.presenter }}</div>
         <div class="d-block">{{ .Scratch.Get "lectureDate" | time.Format "Monday, January 2, 2006" }}</div>
@@ -61,7 +57,14 @@
           <p class="lead">{{ .Content }}</p>
         </div>
         <div class="d-block">
-          <a href="{{ .Params.recording_url }}" target="_blank"><img src="{{ .Params.image | absURL }}" class="img-fluid w-50" alt=""></a>
+          {{ if isset .Params "youtube_id" }}
+            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+              <iframe src="https://www.youtube.com/embed/{{ .Params.youtube_id }}" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen title="YouTube Video"></iframe>
+            </div>
+          {{ end }}
+          {{ if isset .Params "zoom_url" }}
+            <a href="{{ .Params.zoom_url }}" target="_blank"><img src="{{ .Params.image | absURL }}" class="img-fluid w-50" alt=""></a>
+          {{ end }}
         </div>
       </li>
       {{ end }}
