--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -20,6 +20,7 @@
                             </div>
                         </a>
                     </div> <!-- end .card -->
+                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="https://open-emr.org/wiki/index.php/Professional_Support" class="btn btn-primary btn-lg font-weight-bold"><i class="fa fa-history"></i> Click here to find Professional Support</a></div>
                     <div class="pt-2 mb-4 ms-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to have fun donating to OpenEMR by purchasing a piece of OpenEMR History!</a></div>
                 </div>
                 <div class="target_nav col-sm-12 col-md-5 col-lg-5 pb-3 card-holders">
