Abstract the entire menu rendering to a partial

--- a/themes/openemr/layouts/partials/footer.html
+++ b/themes/openemr/layouts/partials/footer.html
@@ -9,26 +9,15 @@
       </div>
       <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">{{ .Site.Params.footer_one_title | default "Links" }}</h5>
-        <ul class="list-unstyled">
-          {{ range .Site.Menus.footer_one.ByWeight }}
-            <li><a href="{{ .URL }}">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
+        {{ partial "menu.html" (dict "menuID" "footer_one" "page" . "listClass" "list-unstyled") }}
       </div>
       <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">{{ .Site.Params.footer_two_title | default "Links" }}</h5>
-        <ul class="list-unstyled">
-          {{ range .Site.Menus.footer_two.ByWeight }}
-            <li><a href="{{ .URL }}">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
+        {{ partial "menu.html" (dict "menuID" "footer_two" "page" . "listClass" "list-unstyled") }}
       </div>
       <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">{{ .Site.Params.footer_three_title | default "Links" }}</h5>
-        <ul class="list-unstyled">
-          {{ range .Site.Menus.footer_three.ByWeight }}
-            <li><a href="{{ .URL }}">{{ .Pre }}{{ .Name }}</a></li>
-          {{ end }}
+        {{ partial "menu.html" (dict "menuID" "footer_three" "page" . "listClass" "list-unstyled") }}
       </ul>
     </div>
   </div>
