--- a/themes/openemr/layouts/partials/menu.html
+++ b/themes/openemr/layouts/partials/menu.html
@@ -1,10 +1,22 @@
+{{/*  
+ * Render a menu as a nested list.
+ * 
+ * This partial is intended to be used with the `menu` shortcode and is based
+  * on the `menu/walk.html` partial from the Hugo docs. It is extended to allow
+  * ulClass and navClass dicts to be passed in to allow for custom classes to be
+  * added to the ul and nav elements.
+  * 
+  * Usage example: {{ partial "menu.html" (dict "menuID" "main" "page" . "ulClass" "list-unstyled" "navClass" "navbar-nav") }}
+*/}}
 {{- $page := .page }}
 {{- $menuID := .menuID }}
-{{- $listClass := .listClass }}
+{{- $ulClass := .ulClass }}
+{{- $navClass := .navClass }}
+
 
 {{- with index site.Menus $menuID }}
-  <nav>
-    <ul {{ with $listClass }}class="{{ . }}"{{ end }}>
+  <nav{{ with $navClass }} class="{{ . }}"{{ end }}>
+    <ul {{ with $ulClass }}class="{{ . }}"{{ end }}>
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
   </nav>
@@ -32,7 +44,7 @@
             {{- printf " %s=%q" $k $v | safeHTMLAttr }}
           {{- end }}
         {{- end -}}
-      >{{ $name }}</a>
+      >{{ .Pre }}{{ $name }}{{ .Post }}</a>
       {{- with .Children }}
         <ul>
           {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
