--- a/themes/openemr/layouts/partials/contained/split-content-image.html
+++ b/themes/openemr/layouts/partials/contained/split-content-image.html
@@ -1,17 +1,19 @@
 
-{{- $fluid_classes := delimit (index .Params "fluid_classes" | default (slice "container-fluid")) " " -}}
-{{- $container_classes := delimit (index .Params "container_classes" | default (slice "container")) " " -}}
-{{- $title_classes := delimit (index .Params "title_class" | default (slice "display-3")) " " -}}
-{{- $content_classes := delimit (index .Params "content_class" | default (slice "lead")) " " -}}
-{{- $image_order := (index .Params "image_order") | default "order-2" -}}
+{{- $fluid_classes := delimit (index .Params.classes "fluid" | default (slice "container-fluid" "py-5")) " " -}}
+{{- $container_classes := delimit (index .Params.classes "container" | default (slice "container")) " " -}}
+{{- $content_container_classes := delimit (index .Params.classes "content_container" | default (slice "col-sm-12" "col-md-6")) " " -}}
+{{- $title_classes := delimit (index .Params.classes "title" | default (slice "display-3")) " " -}}
+{{- $content_classes := delimit (index .Params.classes "content" | default (slice "lead")) " " -}}
+{{- $image_container_classes := delimit (index .Params.classes "image_container" | default (slice "col-sm-12" "col-md-6" "text-center")) " " -}}
+{{- $image_classes := (index .Params.classes "image") | default "img-fluid" -}}
 <div class="{{ $fluid_classes }}">
   <section class="{{ $container_classes}}">
     <div class="row">
-      <div class="col-6 pr-2">
-        <h1 class="{{ $title_classes}}">{{ .Title }}</h1>
+      <div class="{{ $content_container_classes }}">
+        <h2 class="{{ $title_classes}}">{{ .Title }}</h2>
         <span class="{{ $content_classes}}">{{ .Content }}</span>
       </div>
-      <div class="col-6 pl-2 {{ $image_order }}">
+      <div class="{{ $image_container_classes }}">
         <img src="{{ .Params.image | absURL }}" class="img-fluid" alt="{{ .Params.image_alt_text | default "" }}">
       </div>
     </div>
