--- a/themes/openemr/layouts/index.html.html
+++ b/themes/openemr/layouts/index.html.html
@@ -1,62 +1,6 @@
-{{ define "main" }}
-<section class="billboard billboard__home billboard__home--giving-tuesday">
-    <div class="row">
-        <div class="content">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2 class="display-1 mb-4">Support OpenEMR, Give Today.</h2>
-                </div>
-                <div class="col-sm-12 col-lg-7">
-                    <p class="h4 font-weight-light pt-3 mb-5">
-                        Donations fund ONC Certification, API, FHIR and more!
-                    </p>
-                    <div class="card donation">
-                        <a href="{{ .Site.BaseURL }}donate/">
-                            <div class="card-body">
-                                <i class="text-white fa fa-heart fa-4x float-left me-4"></i>
-                                <h4 class="card-title">Give Now</h4>
-                                <div class="card-body">Help support future development of OpenEMR</div>
-                            </div>
-                        </a>
-                    </div> <!-- end .card -->
-                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="https://open-emr.org/wiki/index.php/Professional_Support" class="btn btn-primary btn-lg font-weight-bold"><i class="fa fa-history"></i> Click here to find Professional Support</a></div>
-                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to have fun donating to OpenEMR by purchasing a piece of OpenEMR History!</a></div>
-                </div>
-                <div class="target_nav col-sm-12 col-md-5 col-lg-5 pb-3 card-holders">
-                    <div class="card mb-1 d-none d-xl-flex">
-                        <a href="{{ .Site.Params.demoUrl }}">
-                            <div class="card-body">
-                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/monitor.png" alt="Card image cap" height="64" width="64">
-                                <h4 class="card-title">Try Now</h4>
-                                <p class="card-text">Login to a fully functioning demo of OpenEMR</p>
-                            </div>
-                        </a>
-                    </div>  <!-- end card -->
-                    <div class="card mb-1">
-                        <a href="{{ "support" | absURL }}">
-                            <div class="card-body">
-                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/info.png" alt="Card image cap" height="64" width="64">
-                                <h4 class="card-title">Find Support</h4>
-                                <p class="card-text">Free, community-driven support to assist you</p>
-                            </div>
-                        </a>
-                    </div> <!-- end .card -->
-                    <div class="card mb-1 d-none d-xl-flex">
-                        <a href="{{ .Site.Params.downloadUrl }}">
-                            <div class="card-body">
-                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/download-arrow.png" alt="Card image cap" height="64" width="64">
-                                <h4 class="card-title">Download for Free</h4>
-                                <p class="card-text">Get the latest version for Windows, macOS, or Linux</p>
-                            </div>
-                        </a>
-                    </div> <!-- end .card -->
-                </div>  <!-- end .target_nav -->
-            </div>
-        </div>
-    </div>
-</section>
-
+{{- define "main" -}}
 {{- $homepages := (.Site.GetPage "homepage").Pages -}}
+{{- partial "homepage/billboard" . -}}
 
 {{/*  Render all featured pages sorted by weight  */}}
 {{- range where $homepages.ByWeight "Params.featured" true -}}
