--- a/themes/openemr/layouts/blog/single.html
+++ b/themes/openemr/layouts/blog/single.html
@@ -1,9 +1,69 @@
 {{ define "main" }}
 <main class="page blog single-post">
-    <article class="justify-content-center">
-        {{ partial "blog/page-header.html" . }}
-        {{ partial "blog/page-content.html" . }}
-        {{ partial "blog/post-footer.html" . }}
-    </article>
+  <section class="w-100 billboard__home--giving-tuesday pt-3 pb-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-white">
+          <h1 class="text-white text-center">{{ .Title }}</h1>
+          <div class="d-flex">
+            <div class="text-white lead pe-5">
+              <small class="d-block">Post date</small>
+              <i class="fa fa-calendar"></i>&nbsp;{{ .Date.Format "January 2, 2006" }}
+            </div>
+            {{ with .GetTerms "tags" }}
+            <div class="lead pe-5">
+              <small class="d-block">Tags</small>
+              <div>
+                <ul class="list-inline">
+                  <li class="list-inline-item"><i class="fa fa-folder"></i></li>
+                  {{ range . }}
+                    <li class="list-inline-item">
+                      <a href="{{ .RelPermalink }}" class="text-white">
+                       {{ .LinkTitle }}
+                      </a>
+                    </li>
+                  {{ end }}
+                </ul>
+              </div>
+            </div>
+            {{ end }}
+            <div class="lead pe-5">
+              <small class="d-block">Author</small>
+              <i class="fa fa-user"></i>&nbsp;{{ .Params.author.name }}
+            </div>
+            <div class="flex-fill align-self-center">
+              <ul class="list-inline pull-right mb-0 pb-0">
+                {{ if or (not (isset .Site.Params "sharetwitter")) .Site.Params.shareTwitter }}
+                <li class="list-inline-item">
+                  <a class="icon-twitter btn btn-outline-link text-white" href="https://twitter.com/share?text={{ .Title }}&url={{ .Permalink }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+                      <i class="fa fa-fw fa-twitter"></i>
+                      <span class="sr-only">Twitter</span>
+                  </a>
+                </li>
+              {{ end }} {{ if or (not (isset .Site.Params "sharefacebook")) .Site.Params.shareFacebook }}
+                <li class="list-inline-item">
+                  <a class="icon-facebook btn btn-outline-link text-white" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+                      <i class="fa fa-fw fa-facebook"></i>
+                      <span class="sr-only">Facebook</span>
+                  </a>
+                </li>
+              {{ end }} {{ if .Site.Params.shareLinkedIn }}
+                <li class="list-inline-item">
+                  <a class="icon-linkedin btn btn-outline-link text-white" href="https://www.linkedin.com/shareArticle?mini=true&title={{ .Title }}&url={{ .Permalink }}&summary={{ .Description }}"
+                      onclick="window.open(this.href, 'linkedin-share', 'width=554,height=481');return false;">
+                      <i class="fa fa-fw fa-linkedin"></i>
+                      <span class="sr-only">LinkedIn</span>
+                  </a>
+                  {{ end }}
+                </li>
+              </ul>
+          </div>
+      </div>
+    </div>
+  </section>
+  <article class="justify-content-center mt-4">
+      {{ partial "blog/page-content.html" . }}
+      {{ partial "blog/post-footer.html" . }}
+  </article>
 </main>
 {{ end }}
