--- a/themes/openemr/layouts/partials/blog/page-content.html
+++ b/themes/openemr/layouts/partials/blog/page-content.html
@@ -1,8 +1,7 @@
 <div class="row justify-content-center">
-    <div class="post-meta">
-        {{ $.Param "author.name" }}&nbsp;
-        {{ if not (eq (.Param "author.twitter") "none")}}
-          {{- with $.Param "author.twitter"}}(<a href="https://twitter.com/{{ . }}" target="_blank">@{{ . }})</a>{{- end }}
+    <div class="post-meta sr-only">
+        {{ with index .Params "author" }}
+          Written by {{ .name }} {{- with .twitter }}&nbsp;(<a href="https://twitter.com/{{ . }}" target="_blank">@{{ . }})</a>{{- end }}
         {{ end }}
         on {{ dateFormat "Monday, Jan 2, 2006" .Date }}
     </div>
