--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>{{ .Title }}</title>
+<title>{{ .Title | plainify }}</title>
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
