feat(index.html): free hosting banner (#58)
* fix(chat,demo): date format

* feat(index.html): free hosting banner

* feat(try now): hero box mention free hosting

* feat(demo): free hosting reminder

* WIP

* chore(announcements): update opencore link

---------

Co-authored-by: Robert Down <robertdown@live.com>

--- a/themes/openemr/layouts/_default/baseof.html
+++ b/themes/openemr/layouts/_default/baseof.html
@@ -4,9 +4,12 @@
         {{- block "header" . -}}{{- partial "header.html" . -}}{{- end -}}
     </head>
     <body>
-        {{/* Include the navigation */}}
-        {{- partial "navigation.html" . }}
-
+        <div class="sticky-top">
+          {{/* Announcement Bar */}}
+          {{- partial "homepage-announcement-bar.html" . -}}
+          {{/* Include the navigation */}}
+          {{- partial "navigation.html" . }}
+        </div>
         {{/* Include the main content of the page */}}
         {{ block "main" . }}
             {{/* Override content into here by defining main in a template */}}
