chore: fix hugo build v0.150.0

--- a/themes/openemr/assets/scss/_jumbotron.scss
+++ b/themes/openemr/assets/scss/_jumbotron.scss
@@ -71,7 +71,7 @@
             .target_nav {
                 .card {
                     @extend .text-white;
-                    @extend .text-start;
+                    @extend .text-start !optional;
                     @extend .mb-2;
                     background-color: transparent;
 
